# My-Simple-Blog-Flask

./: .env  .gitignore  README.md  main.py  pyproject.toml
docs/: notebook
instance/: blog.db
src/: config.py  forms.py  models.py  routes.py
static/css/: style.css
templates/: 404.html  create-blog.html  edit-blog.html  index.html  layout.html  message.html  my-blog.html  navigation.html  read-blog.html  signin.html  signup.html  view-blog.html
